--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <br/>
         <a href="https://edu.uni-sz.bg" target="_blank" rel="noopener noreferrer">Това е линк към университета, който ме научи.</a>
         <span><strong>Отворете линка, ако искате да се запишете и вие.</strong></span>
+        <br/>
+        <br/>
+        <a href="https://vladislavnedyalkovivanov.github.io/HTML_CSS" target="_blank" rel="noopener noreferrer">Това е линк към първата ми web страница от 2022 г..</a>
+        <span><strong>Отворете линка, ако искате да я разгледате.</strong></span>
     <hr/>
     <br/>
     <p style="text-align:right;" title="Основен текст">Автор на сайта: Владислав Недялков Иванов</p>
