--- a/galery/index.html
+++ b/galery/index.html
@@ -10,9 +10,13 @@
         <link rel="stylesheet" type="text/css" href="visual.css">
     </head>
     <body>
-        <h1> Web страница за моите рисунки</h1>
+        <h1> Галерия</h1>
         <br/>
-        <p title="Основен текст">Тук можете да ги разгледате рисунки на религиозна тематика:</p>
+        <div>
+            <a class="margins" href="https://vladislavnedyalkovivanov.github.io/draws" target="_blank" rel="noopener noreferrer">Начална страница</a>
+        </div>
+        <br/>
+        <p title="Основен текст">Тук можете да разгледате рисунки на религиозна тематика:</p>
         <a href="img/image.jpg" target="_blank" rel="noopener noreferrer">
             <img id="big-photo" title="Рисунка на Исус Христос" src="img/image.jpg" alt="">
         </a>
@@ -23,7 +27,7 @@
             <img title="Рисунка на Света Богородица" src="img/image2.jpg" alt="">
         </a>
         <hr/>
-        <p title="Основен текст">Тук можете да ги разгледате рисунки на историческа тематика:</p>
+        <p title="Основен текст">Тук можете да разгледате рисунки на историческа тематика:</p>
         <a href="img/image3.jpg" target="_blank" rel="noopener noreferrer">
             <img title="Рисунка на Христо Ботев" src="img/image3.jpg" alt="">
         </a>
@@ -31,7 +35,7 @@
             <img href="img/image4.jpg" title="Рисунка на Христо Ботев" src="img/image4.jpg" alt="">
         </a>
         <hr/>
-        <p title="Основен текст">Тук можете да ги разгледате рисунки на друга тематика:</p>
+        <p title="Основен текст">Тук можете да разгледате рисунки на друга тематика:</p>
         <a href="img/image5.jpg" target="_blank" rel="noopener noreferrer">
             <img title="Рисунка Красавицата и Звяра" src="img/image5.jpg" alt="">
         </a>
@@ -45,9 +49,13 @@
         <a href="img/image8.jpg" target="_blank" rel="noopener noreferrer">
             <img class="weight_pictures" href="img/image8.jpg" title="Рисунка на змей" src="img/image8.jpg" alt="">
         </a>
-
         <br/>
         <br/>
+        <div>
+            <a class="margins" href="https://vladislavnedyalkovivanov.github.io/draws" target="_blank" rel="noopener noreferrer">Начална страница</a>
+        </div>
+        <br/>
+    
         <a href="https://www.w3schools.com" target="_blank" rel="noopener noreferrer">Това е линк към сайт за обучение по програмиране.</a>
         <span><strong>Отворете линка, ако искате да пробвате HTML и вие.</strong></span>
         <br/>
