--- a/index.html
+++ b/index.html
@@ -6,60 +6,38 @@
         <meta name="description" content="Сайт за новобранци в програмирането." />
         <meta name="author" content="Vladislav Ivanov" />
         <meta name="keyboard" content="HTML, CSS, JS, C#" />
-        <title>Страница за новобранци</title>
+        <title>Страница за рисунки</title>
         <link rel="stylesheet" type="text/css" href="visual.css">
     </head>
     <body>
         <h1> Web страница за моите рисунки</h1>
         <br/>
-        <p title="Основен текст">Тук можете да ги разгледате рисунки на религиозна тематика:</p>
-        <a href="img/image.jpg" target="_blank" rel="noopener noreferrer">
-            <img id="big-photo" title="Рисунка на Исус Христос" src="img/image.jpg" alt="">
-        </a>
-        <a href="img/image1.jpg" target="_blank" rel="noopener noreferrer">
-            <img title="Рисунка на Архангел Михаил" src="img/image1.jpg" alt="">
-        </a>
-        <a href="img/image2.jpg" target="_blank" rel="noopener noreferrer">
-            <img title="Рисунка на Света Богородица" src="img/image2.jpg" alt="">
-        </a>
         <hr/>
-        <p title="Основен текст">Тук можете да ги разгледате рисунки на историческа тематика:</p>
-        <a href="img/image3.jpg" target="_blank" rel="noopener noreferrer">
-            <img title="Рисунка на Христо Ботев" src="img/image3.jpg" alt="">
-        </a>
-        <a href="img/image4.jpg" target="_blank" rel="noopener noreferrer">
-            <img href="img/image4.jpg" title="Рисунка на Христо Ботев" src="img/image4.jpg" alt="">
-        </a>
-        <hr/>
-        <p title="Основен текст">Тук можете да ги разгледате рисунки на друга тематика:</p>
-        <a href="img/image5.jpg" target="_blank" rel="noopener noreferrer">
-            <img title="Рисунка Красавицата и Звяра" src="img/image5.jpg" alt="">
-        </a>
-        <br/>
-        <a href="img/image6.jpg" target="_blank" rel="noopener noreferrer">
-            <img class="weight_pictures" href="img/image6.jpg" title="Рисунка на фантастична жена" src="img/image6.jpg" alt="">
-        </a>
-        <a href="img/image7.jpg" target="_blank" rel="noopener noreferrer">
-            <img class="weight_pictures" href="img/image7.jpg" title="Рисунка на змей" src="img/image7.jpg" alt="">
-        </a>
-        <a href="img/image8.jpg" target="_blank" rel="noopener noreferrer">
-            <img class="weight_pictures" href="img/image8.jpg" title="Рисунка на змей" src="img/image8.jpg" alt="">
-        </a>
-
+        <div>
+            <a class="margins" href="galery/index.html" target="_blank" rel="noopener noreferrer">Галерия.</a>
+            <span><strong>Натиснете, за да разгледате изображенията.</strong></span>
+        </div>
         <br/>
         <br/>
-        <a href="https://www.w3schools.com" target="_blank" rel="noopener noreferrer">Това е линк към сайт за обучение по програмиране.</a>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <a class="little_margins" href="https://www.w3schools.com" target="_blank" rel="noopener noreferrer">Това е линк към сайт за обучение по програмиране.</a>
         <span><strong>Отворете линка, ако искате да пробвате HTML и вие.</strong></span>
         <br/>
         <br/>
-        <a href="https://edu.uni-sz.bg" target="_blank" rel="noopener noreferrer">Това е линк към университета, който ме научи.</a>
+        <a class="little_margins" href="https://edu.uni-sz.bg" target="_blank" rel="noopener noreferrer">Това е линк към университета, който ме научи.</a>
         <span><strong>Отворете линка, ако искате да се запишете и вие.</strong></span>
         <br/>
         <br/>
-        <a href="https://vladislavnedyalkovivanov.github.io/HTML_CSS" target="_blank" rel="noopener noreferrer">Това е линк към първата ми web страница от 2022 г..</a>
+        <a class="little_margins" href="https://vladislavnedyalkovivanov.github.io/HTML_CSS" target="_blank" rel="noopener noreferrer">Това е линк към първата ми web страница от 2022 г..</a>
         <span><strong>Отворете линка, ако искате да я разгледате.</strong></span>
-        <hr/>
-        <br/>
-        <p style="text-align:right;" title="Основен текст">Автор на сайта: Владислав Недялков Иванов</p>
+    <hr/>
+    <br/>
+    <p style="text-align:right;" title="Основен текст">Автор на сайта: Владислав Недялков Иванов</p>
+
     </body>
 </html>
