--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br/>
         <hr/>
         <div>
-            <a class="margins" href="galery/index.html" target="_blank" rel="noopener noreferrer">Галерия.</a>
+            <a class="margins" href="galery/index.html" target="_self" rel="noopener noreferrer">Галерия.</a>
             <span><strong>Натиснете, за да разгледате изображенията.</strong></span>
         </div>
         <br/>
@@ -33,7 +33,7 @@
         <span><strong>Отворете линка, ако искате да се запишете и вие.</strong></span>
         <br/>
         <br/>
-        <a class="little_margins" href="https://vladislavnedyalkovivanov.github.io/HTML_CSS" target="_blank" rel="noopener noreferrer">Това е линк към първата ми web страница от 2022 г..</a>
+        <a class="little_margins" href="https://vladislavnedyalkovivanov.github.io/HTML_CSS" target="_self" rel="noopener noreferrer">Това е линк към първата ми web страница от 2022 г..</a>
         <span><strong>Отворете линка, ако искате да я разгледате.</strong></span>
     <hr/>
     <br/>
