--- a/galery/index.html
+++ b/galery/index.html
@@ -13,7 +13,7 @@
         <h1> Галерия</h1>
         <br/>
         <div>
-            <a class="margins" href="https://vladislavnedyalkovivanov.github.io/draws" target="_blank" rel="noopener noreferrer">Начална страница</a>
+            <a class="margins" href="https://vladislavnedyalkovivanov.github.io/draws" target="_self" rel="noopener noreferrer">Начална страница</a>
         </div>
         <br/>
         <p title="Основен текст">Тук можете да разгледате рисунки на религиозна тематика:</p>
@@ -52,15 +52,15 @@
         <br/>
         <br/>
         <div>
-            <a class="margins" href="https://vladislavnedyalkovivanov.github.io/draws" target="_blank" rel="noopener noreferrer">Начална страница</a>
+            <a class="margins" href="https://vladislavnedyalkovivanov.github.io/draws" target="_self" rel="noopener noreferrer">Начална страница</a>
         </div>
         <br/>
     
-        <a href="https://www.w3schools.com" target="_blank" rel="noopener noreferrer">Това е линк към сайт за обучение по програмиране.</a>
+        <a class="little_margins" href="https://www.w3schools.com" target="_blank" rel="noopener noreferrer">Това е линк към сайт за обучение по програмиране.</a>
         <span><strong>Отворете линка, ако искате да пробвате HTML и вие.</strong></span>
         <br/>
         <br/>
-        <a href="https://edu.uni-sz.bg" target="_blank" rel="noopener noreferrer">Това е линк към университета, който ме научи.</a>
+        <a class="little_margins" href="https://edu.uni-sz.bg" target="_blank" rel="noopener noreferrer">Това е линк към университета, който ме научи.</a>
         <span><strong>Отворете линка, ако искате да се запишете и вие.</strong></span>
     <hr/>
     <br/>
